--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ pagination:
   </div>
 </div>
 
-<div>
+<div class="key-services">
 	<h1>AI Solutions Designed For Tommorow</h1>
 	<h2>Key Services:</h2>
 	<u1>
