--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ pagination:
   </div>
 </div>
 
-<div class="key-services">
+<div class="center-text">
 	<h1>AI Solutions Designed For Tommorow</h1>
 	<h2>Key Services:</h2>
 	<u1>
@@ -99,3 +99,13 @@ pagination:
 
 </div>
 </div>
+
+.center-text {
+  display: flex;
+  justify-content: center; /* Horizontally centers the text */
+  align-items: center;    /* Vertically centers the text */
+  height: 100vh;          /* Takes up full viewport height */
+  text-align: center;     /* Centers text alignment */
+  flex-direction: column; /* Allows stacking of elements inside the div */
+}
+
