--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ pagination:
       height: 100vh;          /* Takes up full viewport height */
       text-align: center;      /* Centers text alignment */
       flex-direction: column;  /* Allows stacking of elements inside the div */
+			margin: 0;
+			padding: 0;
     }
   </style>
 </head>
