--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@ pagination:
 <div class="center-text">
 	<h1>AI Solutions Designed For Tommorow</h1>
 	<h2>Key Services:</h2>
-	<u1>
-		<li>AI-Powered Analytics: Uncover deep insights and drive smarter decisions with our analytics engine.</li>
-		<li>Automation Tools: Boost productivity and streamline processes with intelligent automation.</li>
-		<li>Natural Language Processing (NLP): Enhance customer interactions with sophisticated conversational AI.</li>
-		<li>Predictive Models: Stay ahead of the curve with AI-driven predictions for market trends, customer behavior, and more.</li>
-	</ul>
+	<div>
+		<ul>
+			<li>AI-Powered Analytics: Uncover deep insights and drive smarter decisions with our analytics engine.</li>
+			<li>Automation Tools: Boost productivity and streamline processes with intelligent automation.</li>
+			<li>Natural Language Processing (NLP): Enhance customer interactions with sophisticated conversational AI.</li>
+			<li>Predictive Models: Stay ahead of the curve with AI-driven predictions for market trends, customer behavior, and more.</li>
+		</ul>
+	</div>
 </div>
 
 
