--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@ pagination:
 <head>
   <style>
     .center-text {
-      display: flex;
-      justify-content: center; /* Horizontally centers the text */
-      text-align: center;      /* Centers text alignment */
-      flex-direction: column;  /* Allows stacking of elements inside the div */
+      padding: 20px;
     }
   </style>
 </head>
