--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ pagination:
 </div>
 
 <div class="center-text">
-	<h1>AI Solutions Designed For Tommorow</h1>
+	<h1 style="text-align: center;">AI Solutions Designed For Tommorow</h1>
 	<h2>Key Services:</h2>
 	<ul>
 		<li>AI-Powered Analytics: Uncover deep insights and drive smarter decisions with our analytics engine.</li>
