--- a/index.html
+++ b/index.html
@@ -31,6 +31,32 @@ pagination:
 		<li>Natural Language Processing (NLP): Enhance customer interactions with sophisticated conversational AI.</li>
 		<li>Predictive Models: Stay ahead of the curve with AI-driven predictions for market trends, customer behavior, and more.</li>
 	</ul>
+
+	<hr>
+
+	<h2>What We Do</h2>
+	<p>At SynfulAI, we specialize in a wide range of AI-powered products, including:</p>
+	<ul>
+  	<li>**AI-Powered Analytics:** Uncover actionable insights from complex data.</li>
+  	<li>**Automation Tools:** Streamline workflows with intelligent automation.</li>
+  	<li>**Natural Language Processing (NLP):** Enhance customer engagement with advanced conversational AI.</li>
+  	<li>**Predictive Analytics:** Anticipate market trends, customer behavior, and more with our powerful prediction models.</li>
+	</ul>
+	<p>Our products are designed to be flexible, scalable, and tailored to fit your unique business needs.</p>
+
+	<hr>
+
+	<h2>Why Choose SynfulAI?</h2>
+	<ul>
+  	<li>**Expertise:** With years of experience in AI development, we bring the highest level of knowledge to every project.</li>
+  	<li>**Tailored Solutions:** We customize our AI tools to seamlessly integrate with your existing systems and meet your specific business challenges.</li>
+  	<li>**Support & Scalability:** Our AI products are built for scale, ensuring they grow alongside your business while our dedicated support team is always available to assist you.</li>
+	</ul>
+
+	<h2>Ready to Transform Your Business?</h2>
+  <p>Let us help you unlock the full potential of AI.</p>
+  <a href="/contact" style="background-color: #ff6b6b; color: white; padding: 15px 30px; text-decoration: none; border-radius: 25px; font-size: 1.2em;">Get in Touch</a>
+
 </div>
 
 <div class="wrapper">
