--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ pagination:
 
 	<h2>Ready to Transform Your Business?</h2>
   <p>Let us help you unlock the full potential of AI.</p>
-  <a href="/contact" style="background-color: #71b5bf; color: white; padding: 15px 30px; text-decoration: none; border-radius: 25px; font-size: 1.2em;">Get in Touch</a>
+  <a href="/contact" style="background-color: #FFCEC9; color: #FB5517; padding: 15px 30px; text-decoration: none; border-radius: 25px; font-size: 1.2em;">Get in Touch</a>
 
 </div>
 
